
[project]
name = "masketer"
version = "0.0.1"
description = "Notebook functions packaged as the 'masketer' Python library."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = ["pandas>=2.0","numpy>=1.24","matplotlib>=3.8"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
