
[project]
name = "masketer"
version = "0.1.3"    
description = "Masketer: notebook functions packaged for reuse"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = ["pandas>=2.0", "numpy>=1.24", "matplotlib>=3.8", "openpyxl>=3.1"]

[project.urls]
Homepage = "https://github.com/ejimeoghenefejiro/masketer_pkg"
Repository = "https://github.com/ejimeoghenefejiro/masketer_pkg"
Issues = "https://github.com/ejimeoghenefejiro/masketer_pkg/issues"

[project.optional-dependencies]
notebook = ["seaborn>=0.13", "tabulate>=0.9"]
ml = ["scikit-learn>=1.3", "scipy>=1.10"]
latex = ["pylatex>=1.4"]
data = ["yfinance>=0.2.4"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

